@@ -69,6 +69,9 @@ Abbreviated Changelog from 2.4.6 Final
 - Added a refresh icon to the left menu which lets the user refresh the menu and reset all tool-cookies. Often needed after a while to get the three expansion to work as it should.
 - Fixed so the same description tooltip are used for all properties.
 - Added so one can search for contents in the inline asset dialog and only get those contents which has an asset on them and the asset name or key matches the searched keyword.
+- Made input encoding filter configurable at build-time with properties.
+- Made component editor view (structure tool view) consider available tool languages when choosing localized labels for edit on sight etc.
+- Added cache-possibility to the matchingContents-tag and implements a default caching.
 
 -------------------------------------------------------------------------------------
 - InfoGlue 2.4.6 Final
